# anorak

./: .gitignore  README.txt  anorak.cabal  parser.cabal  setup.hs
parser/: RLTParser.hs
src/: Anorak.hs
src/Anorak/: RLTParser.hs  Types.hs
src/haskell/: Anorak.hs  Main.hs  Tests.hs
src/haskell/Anorak/: Aggregates.hs  Config.hs  Core.hs  FeatureExtractor.hs  Goals.hs  Publisher.hs  RLTParser.hs  Results.hs  Sequences.hs  Tables.hs  Tests.hs  Types.hs  Utils.hs
src/haskell/Util/: File.hs  List.hs  Maths.hs  Tests.hs  Tuple.hs
src/python/anorak/: aliases.py  config.py  disambiguator.py  results.py  scraper.py
src/templates/: aggregates.html.st  aggregates.st  aggregatetable.st  anorak.css  anorak.js  awaycurrentsequences.html.st  awayformtable.html.st  awaylongestsequences.html.st  awaytable.html.st  bootstrap.min.css  currentsequences.html.st  details.st  firsthalftable.html.st  footer.st  formtable.html.st  formtable.st  goals.html.st  hattrick.st  header.st  homecurrentsequences.html.st  homeformtable.html.st  homelongestsequences.html.st  hometable.html.st  index.html.st  leaguetable.st  leaguetabletabs.st  longestsequences.html.st  matchday.st  minileague.html.st  records.st  result.st  results.html.st  resultspie.st  scorer.st  secondhalftable.html.st  selector.json.st  selector.st  sequences.st  sequencetable.st  sorttable.js  (+7 more)
src/templates/css/: anorak.css  bootstrap.min.css
src/templates/js/: anorak.js  sorttable.js
