name:           Anorak
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
synopsis:       A football statistics package.
description:    Generates HTML pages containing league tables, form tables,
                sequences and other statistics for one or more football
                leagues.  Input data is provided in the form of the  .rlt files
                used by the Football Statistics Applet
                (see <https://fsa.dev.java.net>)
license:        GPL
license-file:   LICENCE.txt
author:         Daniel W. Dyer
copyright:      (C) 2008-2010 Daniel W. Dyer
homepage:       http://wiki.github.com/dwdyer/anorak/
bug-reports:    http://github.com/dwdyer/anorak/issues

source-repository head
    type:       git
    location:   git://github.com/dwdyer/anorak.git

executable anorak
    main-is:            Main.hs
    other-modules:      Anorak.Aggregates,
                        Anorak.Config,
                        Anorak.FeatureExtractor
                        Anorak.Goals,
                        Anorak.Publisher,
                        Anorak.Results,
                        Anorak.RLTParser,
                        Anorak.Sequences,
                        Anorak.Tables,
                        Util.File,
                        Util.List,
                        Util.Maths,
                        Util.Tuple
    build-depends:      base, containers, directory, filepath, haskell98, HStringTemplate >= 0.6.3, old-locale, attoparsec, time, xml, bytestring
    hs-source-dirs:     src/haskell
    ghc-options:        -Wall -O2

executable test
    main-is:            Tests.hs
    other-modules:      Anorak.Results,
                        Anorak.Tests,
                        Util.List,
                        Util.Tests
    build-depends:      base, haskell98, time, bytestring, QuickCheck < 2
    hs-source-dirs:     src/haskell
